--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container{
+  display: grid;
+  grid-template-columns: 120px 120px 120px 60px;
+  grid-template-rows: 50px 50px 50px 50px 50px 50px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10%;
+}
+.item{
+  border: none;
+  font-size: 25px;
+  background-color: antiquewhite;
+}
+.inp{
+  grid-area: 1 / 1 / 2 / 5;
+  text-align: right;
+  padding-top: 15px;
+  padding-right: 20px;
+}
+.clr,.rem,.mod,.divi,.multi,.plus,.minus,.pow,.equal{
+  color: crimson;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
