--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,10 @@
 .item{
   border: none;
   font-size: 25px;
-  background-color: antiquewhite;
-}
+  background-color: rgb(14, 13, 13);
+  color: white;
+  border: 1px solid white;
+}  
 .inp{
   grid-area: 1 / 1 / 2 / 5;
   text-align: right;
@@ -21,3 +23,7 @@
   color: crimson;
 }
 
+button:hover{
+  cursor: pointer;
+  background-color: rgb(119, 122, 126);
+}
